--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,43 @@
 appdirs==1.4.4
+black==20.8b1
+certifi==2020.12.5
+cffi==1.14.4
+chardet==4.0.0
+click==7.1.2
+cryptography==3.3.1
+defusedxml==0.6.0
 distlib==0.3.1
 Django==2.2
+django-allauth==0.44.0
+django-bootstrap-form==3.4
+django-crispy-forms==1.10.0
 django-model-utils==4.1.1
 filelock==3.0.12
 fuzzywuzzy==0.18.0
+idna==2.10
 importlib-metadata==2.1.1
+mypy-extensions==0.4.3
+oauthlib==3.1.0
 packaging==20.8
+pathspec==0.8.1
 Pillow==8.0.1
 pluggy==0.13.1
 py==1.10.0
+pycparser==2.20
+PyJWT==1.7.1
 pyparsing==2.4.7
 python-Levenshtein==0.12.0
+python3-openid==3.2.0
 pytz==2020.4
+regex==2020.11.13
+requests==2.25.1
+requests-oauthlib==1.3.0
 six==1.15.0
 sqlparse==0.4.1
 toml==0.10.2
 tox==3.20.1
+typed-ast==1.4.1
+typing-extensions==3.7.4.3
+urllib3==1.26.2
 virtualenv==20.2.2
 zipp==3.4.0
